--- a/src/frontend_swift/OneBank/OneBank/View/Dashboard.storyboard
+++ b/src/frontend_swift/OneBank/OneBank/View/Dashboard.storyboard
@@ -19,7 +19,7 @@
         <!--Dashboad View Controller-->
         <scene sceneID="dzh-vu-WE0">
             <objects>
-                <viewController id="fbm-al-6CU" customClass="DashboadViewController" customModule="OneBank" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController modalPresentationStyle="fullScreen" id="fbm-al-6CU" customClass="DashboadViewController" customModule="OneBank" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Jib-hY-KIa">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
